--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,31 @@
-body {
-      background-color: black;
-      color: white;
-}
-        
-h1 {
-    font-size: 20px;
-}
-        
-p {
-   font-size: 12px;
-   color: green;
-}
-        
-div {
-     border-style: dotted;
-     border-width: 2px;
-     height: 100px;
-     width: 100px;
-}
-        
-ol { 
-    list-style-type: lower-alpha;
-}
-        
-ul { 
-    list-style-type: square;
-}
+<style type="text/css">
+
+      body {
+            background-color: black;
+            color: white;
+      }
+
+      h1 {
+          font-size: 20px;
+      }
+
+      p {
+         font-size: 12px;
+         color: green;
+      }
+
+      div {
+           border-style: dotted;
+           border-width: 2px;
+           height: 100px;
+           width: 100px;
+      }
+
+      ol { 
+          list-style-type: lower-alpha;
+      }
+
+      ul { 
+          list-style-type: square;
+      }
+</style>
